# plex-discord-rpc

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  deploy.yml
src/: cache_object.rs  config.rs  constants.rs  main.rs  media_container.rs  notification_container.rs
