[package]
name = "plex-discord-rpc"
version = "1.0.0"
edition = "2021"
authors = ["rekyuu"]
description = "Discord Rich Presence for whatever you're watching on Plex."
license = "GPL-3.0"
repository = "https://github.com/rekyuu/plex-discord-rpc"
readme = "README.md"
keywords = ["discord", "plex", "plex-media-server", "rich-presence", "discord-rpc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
discord-rpc-client = "0.3.0"
merge = "0.1.0"
quick-xml = { version = "0.23.0", features = [ "serialize" ] }
reqwest = "0.11.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
websocket = "0.26.4"